package algonquin.cst2335.ni000017;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityScenarioRule<MainActivity> mActivityScenarioRule =
            new ActivityScenarioRule<>(MainActivity.class);

    /**
     * Test the password includes Uper Case or not
     */
    @Test
    public void TestFindMissingUperCase() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        //find the view
        ViewInteraction appCompatEditText = onView(withId(R.id.editText));

        //type the password
        appCompatEditText.perform(replaceText("1a@"));
        //find the button
        ViewInteraction materialButton = onView(withId(R.id.button));
        //Click the button
        materialButton.perform(click());
        //find the text view
        ViewInteraction textView =onView(withId(R.id.textView));
        // check the text
        textView.check(matches(withText("You shall not pass!")));

    }

    /**
     * Test the password if have Lower Case or not
     */
    @Test
    public void TestFindMissingLowerCase() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        //find the view
        ViewInteraction appCompatEditText = onView(withId(R.id.editText));

        //type the password
        appCompatEditText.perform(replaceText("1A@"));
        //find the button
        ViewInteraction materialButton = onView(withId(R.id.button));
        //Click the button
        materialButton.perform(click());
        //find the text view
        ViewInteraction textView =onView(withId(R.id.textView));
        // check the text
        textView.check(matches(withText("You shall not pass!")));

    }

    /**
     * Test the password if have Special Charactor or not
     */
    @Test
    public void TestFindMissingSpecialCharactor() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        //find the view
        ViewInteraction appCompatEditText = onView(withId(R.id.editText));

        //type the password
        appCompatEditText.perform(replaceText("1aA"));
        //find the button
        ViewInteraction materialButton = onView(withId(R.id.button));
        //Click the button
        materialButton.perform(click());
        //find the text view
        ViewInteraction textView =onView(withId(R.id.textView));
        // check the text
        textView.check(matches(withText("You shall not pass!")));

    }

    /**
     * Test the password includes number or not
     */
    @Test
    public void TestFindMissingNumber() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        //find the view
        ViewInteraction appCompatEditText = onView(withId(R.id.editText));

        //type the password
        appCompatEditText.perform(replaceText("a@A"));
        //find the button
        ViewInteraction materialButton = onView(withId(R.id.button));
        //Click the button
        materialButton.perform(click());
        //find the text view
        ViewInteraction textView =onView(withId(R.id.textView));
        // check the text
        textView.check(matches(withText("You shall not pass!")));
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
